--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<html>
-  <head>Saagar Kausheeka</head>
+<!DOCTYPE html>
+  <head>
+    <title>
+      Saagar Kausheeka
+    </title>
+  </head>
   
   <body>
     hello world! I am currently under construction, stay tuned for more!
