--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>CHANGE THIS</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>lorem ipsum<br>dolor sit amet</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -269,8 +269,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>UNDER CONSTRUCTION</h3>
+                        <p>lorem ipsum</p>
                     </div>
                 </div>
             </div>
@@ -279,7 +279,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
+                        Copyright &copy; Saagar Kausheeka 2016
                     </div>
                 </div>
             </div>
