--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <p>
-      <a href="http://saagarkausheeka.me/blog"> Check out my blog</a>
+      <a href="http://saagarkausheeka.com/blog"> Check out my blog</a>
     </p>
 
   </body>
