--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <p>
       <a href="http://www.saagarkausheeka.me/blog"> Check out my blog</a>
+      what's up alanna
     </p>
 
   </body>
