--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>
-      Saagar Kausheeka
-    </title>
+    <title>Saagar Kausheeka</title>
   </head>
 
   <body>
 
     <p>
-<<<<<<< HEAD
       <a href="http://www.saagarkausheeka.me/blog"> Check out my blog</a>
       what's up alanna
-=======
-      <a href="http://saagarkausheeka.com/blog"> Check out my blog</a>
->>>>>>> fce7786309bb115624893ee5ad37e90a6507b307
-    </p>
+      </p>
 
   </body>
 
