--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <p>
       <a href="http://www.saagarkausheeka.me/blog"> Check out my blog</a>
-      what's up alanna
+      what's up tvisha
       </p>
 
   </body>
